[build-system]
requires = ["setuptools>=61.0", "aiohttp"]
build-backend = "setuptools.build_meta"

[project]
name = "lighttest_supplies"
version = "0.0.9"
authors = [
  { name= "David Toth", email= "tothlldavid@gmail.com" },
]
description = "supplie-methods for testing"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"